--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -9,6 +9,7 @@
 
 <body>
 <div class="content">
+    <!-- 登录 -->
     <div class="form sign-in">
         <h2>欢迎回来</h2>
         <label>
@@ -21,8 +22,9 @@
         </label>
         <p class="forgot-pass"><a href="javascript:">忘记密码？</a></p>
         <button type="button" class="submit">登 录</button>
-
     </div>
+
+    <!-- 登录注册页面展示 -->
     <div class="sub-cont">
         <div class="img">
             <div class="img__text m--up">
@@ -53,12 +55,11 @@
                 <input type="password" />
             </label>
             <button type="button" class="submit">注 册</button>
-
         </div>
     </div>
 </div>
 
-<script src="js/script.js"></script>
+<script src="js/login/login.js"></script>
 
 </body>
 
